  * Rename patch 01_asciidoc-escape-FTBFS as 01_asciidoc7compatible to add a
    "-a asciidoc7compatible" to ASCIIDOC_FLAGS.  Thanks Kalle Olavi Niemitalo
    <kon@iki.fi> for the suggestion.
  * debian/copyright: Add 2008 to Debian packaging Copyright 'years'.
  * debian/control: Remove superfluous ;a=summary suffix from gitweb URL in
    Vcs-Browser:

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Mon, 21 Jan 2008 13:26:30 +0530

elinks (0.11.3-2) unstable; urgency=low

  * Change Moritz's email ID in Uploaders to jmm@debian.org to be in sync with
    his other packages
  * Correction: Change Vcs-Svn in debian/control to Vcs-Git and VCS-Browser to
    the gitweb URL
  * Pass --disable-leds to configure, it causes a lot of wakeups on laptops.
    Update 06_elinks.conf-parse-error.diff to comment ui.leds.enable option
    (Closes: #459467)
  * elinks-lite is Priority: extra (Policy Section 2.5: Priorities -- because
    it conflicts with elinks, elinks-data and elinks-doc)
  * elinks and elinks-lite Don't Provides: links and don't install a links
    alternative (Closes: #154859)
  * Patch debian/patches/08_436817_nostrip.diff to prevent the binaries from
    being stipped unless dh_strip would want to (Closes: #436817)

 -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Mon, 14 Jan 2008 17:06:19 +0530

elinks (0.11.3-1) unstable; urgency=low

  * Adopted by Y Giridhar Appaji Nag <giridhar@appaji.net> (Closes: #451088)
    + Add Co-maintainer Moritz Muehlenhoff <jmm@inutil.org> to Uploaders
  * Documentation is now built using sources, depends on the features
    configured while building elinks.
  * Remove superfluous m4 and bison Build-Depends.
  * Arch indep part of elinks is large, moved it to elinks-data package
    + Add lintian/linda overrides for elinks.1 man-page (installed by the
      elinks-data package).
  * New upstream release 0.11.3 (Closes: #429311)
    + Don't crash while sorting thru bookmarks (Closes: #315886)