@@ -1,11 +1,0 @@
-[Desktop Entry]
-Version=1.0
-Name=ELinks-lite
-Categories=Utility;Network;
-GenericName=ELinks Web Browser
-Comment=ELinks text mode WWW browser (lightweight)
-Exec=/usr/bin/elinks %u
-Terminal=true
-Type=Application
-Icon=html
-MimeType=text/html;
