@@ -178,6 +178,11 @@ install-arch:
 	mkdir -p $(CURDIR)/debian/tmp.elinks-data/usr/
 	mv -f $(CURDIR)/debian/elinks/usr/share $(CURDIR)/debian/tmp.elinks-data/usr/
 	rm -f $(CURDIR)/debian/tmp.elinks-data/usr/share/locale/locale.alias
+	# Install desktop files for elinks and elinks-lite
+	install -o root -g root -p -D -m 0644 $(CURDIR)/debian/elinks.desktop \
+		$(CURDIR)/debian/elinks/usr/share/applications/elinks.desktop
+	install -o root -g root -p -D -m 0644 $(CURDIR)/debian/elinks.desktop \
+		$(CURDIR)/debian/elinks-lite/usr/share/applications/elinks-lite.desktop
 	# Install lintian and linda over-rides for elinks.1
 	install -o root -g root -p -D -m 0644 $(CURDIR)/debian/elinks.lintian \
 		$(CURDIR)/debian/elinks/usr/share/lintian/overrides/elinks
