@@ -9,8 +9,10 @@ elinks (0.11.3-3) unstable; urgency=low
   * debian/copyright: Add 2008 to Debian packaging Copyright 'years'.
   * debian/control: Remove superfluous ;a=summary suffix from gitweb URL in
     Vcs-Browser:
+  * Really install elinks.desktop desktop file for elinks and elinks-lite
+    (remove elinks-lite.desktop, it is identical to elinks.desktop).
 
- -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Mon, 21 Jan 2008 13:26:30 +0530
+ -- Y Giridhar Appaji Nag <giridhar@appaji.net>  Tue, 22 Jan 2008 13:12:16 +0530
 
 elinks (0.11.3-2) unstable; urgency=low
 
